--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -403,8 +403,8 @@ th {
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?t8gz0z");
-  src: url("../fonts/icomoon.eot?t8gz0z#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?t8gz0z") format("truetype"), url("../fonts/icomoon.woff?t8gz0z") format("woff"), url("../fonts/icomoon.svg?t8gz0z#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?gynrji");
+  src: url("../fonts/icomoon.eot?gynrji#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?gynrji") format("truetype"), url("../fonts/icomoon.woff?gynrji") format("woff"), url("../fonts/icomoon.svg?gynrji#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -424,71 +424,79 @@ th {
 }
 
 .icon-home-button:before {
-  content: "\e915";
+  content: "\e927";
 }
 
 .icon-favourites-filled-star-symbol:before {
-  content: "\e916";
+  content: "\e926";
 }
 
 .icon-service-courier:before {
-  content: "\e917";
+  content: "\e925";
 }
 
 .icon-facebook-chat-balloons:before {
-  content: "\e918";
+  content: "\e924";
 }
 
 .icon-staff-symbol:before {
-  content: "\e919";
+  content: "\e923";
 }
 
 .icon-notebook:before {
-  content: "\e914";
+  content: "\e922";
 }
 
 .icon-sign:before {
-  content: "\e911";
+  content: "\e920";
 }
 
 .icon-clothes-tag:before {
-  content: "\e90e";
+  content: "\e91f";
 }
 
 .icon-rent:before {
-  content: "\e90f";
+  content: "\e91e";
 }
 
 .icon-flash-activation:before {
-  content: "\e90b";
+  content: "\e91d";
 }
 
 .icon-list:before {
-  content: "\e90c";
+  content: "\e91b";
 }
 
 .icon-menu:before {
-  content: "\e90a";
+  content: "\e919";
 }
 
 .icon-clip:before {
-  content: "\e908";
+  content: "\e90b";
 }
 
 .icon-symbol:before {
-  content: "\e909";
+  content: "\e90e";
 }
 
 .icon-arrows:before {
   content: "\e904";
 }
 
+.icon-technical-support:before {
+  content: "\e91c";
+}
+
+.icon-agency:before {
+  content: "\e91a";
+}
+
 .icon-trash:before {
   content: "\e910";
 }
 
-.icon-exclamation-triangle:before {
-  content: "\e912";
+.icon-file-zip:before {
+  content: "\e916";
 }
 
 .icon-contact_phone:before {
@@ -503,16 +511,32 @@ th {
   content: "\e906";
 }
 
+.icon-directions:before {
+  content: "\e914";
+}
+
+.icon-phone_iphone:before {
+  content: "\e913";
+}
+
+.icon-plus:before {
+  content: "\e900";
+}
+
+.icon-login:before {
+  content: "\e918";
+}
+
 .icon-search:before {
   content: "\f02e";
 }
 
 .icon-pencil:before {
-  content: "\e913";
+  content: "\e921";
 }
 
 .icon-info:before {
-  content: "\e907";
+  content: "\e917";
 }
 
 .icon-checkmark:before {
@@ -527,8 +551,40 @@ th {
   content: "\e902";
 }
 
-.icon-plus:before {
-  content: "\e900";
+.icon-bin:before {
+  content: "\e90f";
+}
+
+.icon-notification:before {
+  content: "\e90c";
+}
+
+.icon-key:before {
+  content: "\e907";
+}
+
+.icon-exclamation-triangle:before {
+  content: "\e912";
+}
+
+.icon-fax:before {
+  content: "\e908";
+}
+
+.icon-envelope:before {
+  content: "\e909";
+}
+
+.icon-user2:before {
+  content: "\e90a";
+}
+
+.icon-phone:before {
+  content: "\e915";
+}
+
+.icon-user:before {
+  content: "\e911";
 }
 
 #sidebar-dashboard .notifications-links, #sidebar-dashboard .sideBar-links, #sidebar-dashboard .sideBar-links li .sub-links, .social-networks, #footer .cols-holder ul {
@@ -1201,8 +1257,6 @@ a {
 }
 
 #sidebar-dashboard .search-sideBar {
-  border: 1px solid #fff;
-  border-radius: 20px;
   overflow: hidden;
   width: 90%;
   margin: 10px auto 0;
@@ -1210,46 +1264,82 @@ a {
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"], #sidebar-dashboard .search-sideBar input[type="search"] {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
   width: 100%;
   height: 30px;
   background: transparent;
   color: #fff;
   font-size: 14px;
   line-height: 17px;
-  border: 0;
   padding: 5px 40px 5px 10px;
+  transition: border 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"]::-webkit-input-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]::-webkit-input-placeholder {
-  opacity: 1;
+  opacity: 0.5;
   color: #fff;
+  transition: opacity 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"]::-moz-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]::-moz-placeholder {
   opacity: 1;
-  opacity: 1;
+  opacity: 0.5;
   color: #fff;
+  transition: opacity 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"]:-moz-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:-moz-placeholder {
-  opacity: 1;
+  opacity: 0.5;
   color: #fff;
+  transition: opacity 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"]:-ms-input-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:-ms-input-placeholder {
-  opacity: 1;
+  opacity: 0.5;
   color: #fff;
+  transition: opacity 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar input[type="text"].placeholder, #sidebar-dashboard .search-sideBar input[type="search"].placeholder {
+  opacity: 0.5;
+  color: #fff;
+  transition: opacity 0.4s ease;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus, #sidebar-dashboard .search-sideBar input[type="search"]:focus {
+  border-color: #fff;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus::-webkit-input-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:focus::-webkit-input-placeholder {
   opacity: 1;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus::-moz-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:focus::-moz-placeholder {
+  opacity: 1;
+  opacity: 1;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus:-moz-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:focus:-moz-placeholder {
+  opacity: 1;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus:-ms-input-placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:focus:-ms-input-placeholder {
+  opacity: 1;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus.placeholder, #sidebar-dashboard .search-sideBar input[type="search"]:focus.placeholder {
+  opacity: 1;
+}
+
+#sidebar-dashboard .search-sideBar input[type="text"]:focus ~ button[type="submit"], #sidebar-dashboard .search-sideBar input[type="search"]:focus ~ button[type="submit"] {
   color: #fff;
 }
 
 #sidebar-dashboard .search-sideBar button[type="submit"] {
   border: 0;
   background: transparent;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.5);
   position: absolute;
   top: 50%;
   right: 10px;
@@ -1261,6 +1351,7 @@ a {
   margin: -13px 0 0;
   appearance: none;
   outline: none;
+  transition: color 0.4s ease;
 }
 
 #sidebar-dashboard .search-sideBar button[type="submit"]:hover {
