--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -351,34 +351,38 @@ a{ outline: none;}
 		overflow: hidden;
 	}
 	.search-sideBar{
-		border: 1px solid $white;
-		border-radius: 20px;
 		overflow: hidden;
 		width: 90%;
 		margin: 10px auto 0;
 		position: relative;
 		
 		input[type="text"], input[type="search"] {
+			border: 1px solid rgba($white, 0.5);
+			border-radius: 20px;
 			width: 100%;
 			height: 30px;
 			background: transparent;
 			color: $white;
 			@include font(14,17);
-			border: 0;
 			padding:5px 40px 5px 10px;
+			transition: border 0.4s ease;
 			
 			@include placeholder{
-				opacity: 1;
+				opacity: 0.5;
 				color: $white;
+				transition: opacity 0.4s ease;
 			}
 			
 			&:focus{
+				border-color: $white;
+				@include placeholder{ opacity: 1;}
+				~ button[type="submit"]{ color: $white;}
 			}
 		}
 		button[type="submit"]{
 			border: 0;
 			background: transparent;
-			color: $white;
+			color: rgba($white, 0.5);
 			position: absolute;
 			top: 50%;
 			right: 10px;
@@ -390,6 +394,7 @@ a{ outline: none;}
 			margin: -13px 0 0;
 			appearance: none;
 			outline: none;
+			transition: color 0.4s ease;
 			
 			&:hover{
 				color: $index-white;
